// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tile s huge 1`] = `
<style>
.IS1 {
  color: #1D1D1B;
  font-family: TimesModern-Bold;
  font-size: 20;
  margin-bottom: 0;
  line-height: 20px;
}

.IS2 {
  flex-direction: row;
  align-items: center;
  margin-bottom: 10px;
}

.IS3 {
  color: #696969;
  font-family: TimesDigitalW04-Regular;
  font-size: 14;
  line-height: 20px;
}

.IS4 {
  color: #696969;
  font-family: GillSansMTStd-Medium;
  font-size: 12;
  margin-top: 10px;
}

.IS5 {
  padding: 15px;
}
</style>

<div
  className="tc-view__TcView-nuazoi-0 fPjBcr IS5"
>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr IS2"
  >
    <div
      className="tc-text__TcText-sc-15igzev-0 lhcAkf IS1"
    >
      Nature notes
    </div>
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 lhcAkf IS3"
  >
    <p>
      <b>
        Rick Astley
      </b>
      , singer-songwriter, 
      <i>
        Never Gonna Give You Up 
      </i>
      (1987), 53; 
      <b>
        Mike Batt
      </b>
      , composer, songwriter, 
      <i>
        Wombling Free 
      </i>
      (1978), 
      <i>
        Bright Eyes 
      </i>
    </p>
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 lhcAkf IS4"
  >
    <span>
      Libby Purves
    </span>
  </div>
</div>
`;

exports[`tile s medium 1`] = `
<style>
.IS1 {
  color: #1D1D1B;
  font-family: TimesModern-Bold;
  font-size: 20;
  margin-bottom: 5px;
  line-height: 20px;
}

.IS2 {
  flex-direction: row;
  align-items: center;
  margin-bottom: 5px;
}

.IS3 {
  color: #696969;
  font-family: TimesDigitalW04-Regular;
  font-size: 14;
  line-height: 20px;
}

.IS4 {
  color: #696969;
  font-family: GillSansMTStd-Medium;
  font-size: 12;
  margin-top: 10px;
}

.IS5 {
  padding: 15px;
}
</style>

<div
  className="tc-view__TcView-nuazoi-0 fPjBcr IS5"
>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr IS2"
  >
    <div
      className="tc-text__TcText-sc-15igzev-0 lhcAkf IS1"
    >
      Nature notes
    </div>
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 lhcAkf IS3"
  >
    <p>
      <b>
        Rick Astley
      </b>
      , singer-songwriter, 
      <i>
        Never Gonna Give You Up 
      </i>
      (1987), 53; 
      <b>
        Mike Batt
      </b>
      , composer, songwriter, 
      <i>
        Wombling Free 
      </i>
      (1978), 
      <i>
        Bright Eyes 
      </i>
    </p>
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 lhcAkf IS4"
  >
    <span>
      Libby Purves
    </span>
  </div>
</div>
`;

exports[`tile s no byline 1`] = `
<style>
.IS1 {
  color: #1D1D1B;
  font-family: TimesModern-Bold;
  font-size: 22;
  margin-bottom: 5px;
}

.IS2 {
  align-items: center;
}

.IS3 {
  color: #696969;
  font-family: TimesDigitalW04-Regular;
  font-size: 14;
  line-height: 20px;
}

.IS4 {
  padding-bottom: 10px;
}
</style>

<div
  className="tc-view__TcView-nuazoi-0 fPjBcr IS4"
>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr IS2"
  >
    <div
      className="tc-text__TcText-sc-15igzev-0 lhcAkf IS1"
    >
      Nature notes
    </div>
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 lhcAkf IS3"
  >
    <p>
      <b>
        Rick Astley
      </b>
      , singer-songwriter, 
      <i>
        Never Gonna Give You Up 
      </i>
      (1987), 53; 
      <b>
        Mike Batt
      </b>
      , composer, songwriter, 
      <i>
        Wombling Free 
      </i>
      (1978), 
      <i>
        Bright Eyes 
      </i>
    </p>
  </div>
</div>
`;

exports[`tile s small 1`] = `
<style>
.IS1 {
  color: #1D1D1B;
  font-family: TimesModern-Bold;
  font-size: 22;
  margin-bottom: 5px;
}

.IS2 {
  align-items: center;
}

.IS3 {
  color: #696969;
  font-family: TimesDigitalW04-Regular;
  font-size: 14;
  line-height: 20px;
}

.IS4 {
  color: #696969;
  font-family: GillSansMTStd-Medium;
  font-size: 12;
  margin-top: 10px;
}

.IS5 {
  padding-bottom: 10px;
}
</style>

<div
  className="tc-view__TcView-nuazoi-0 fPjBcr IS5"
>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr IS2"
  >
    <div
      className="tc-text__TcText-sc-15igzev-0 lhcAkf IS1"
    >
      Nature notes
    </div>
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 lhcAkf IS3"
  >
    <p>
      <b>
        Rick Astley
      </b>
      , singer-songwriter, 
      <i>
        Never Gonna Give You Up 
      </i>
      (1987), 53; 
      <b>
        Mike Batt
      </b>
      , composer, songwriter, 
      <i>
        Wombling Free 
      </i>
      (1978), 
      <i>
        Bright Eyes 
      </i>
    </p>
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 lhcAkf IS4"
  >
    <span>
      Libby Purves
    </span>
  </div>
</div>
`;

exports[`tile s wide 1`] = `
<style>
.IS1 {
  color: #1D1D1B;
  font-family: TimesModern-Bold;
  font-size: 20;
  margin-bottom: 0;
  line-height: 20px;
}

.IS2 {
  flex-direction: row;
  align-items: center;
  margin-bottom: 10px;
}

.IS3 {
  color: #696969;
  font-family: TimesDigitalW04-Regular;
  font-size: 14;
  line-height: 20px;
}

.IS4 {
  color: #696969;
  font-family: GillSansMTStd-Medium;
  font-size: 12;
  margin-top: 10px;
}

.IS5 {
  padding: 15px;
}
</style>

<div
  className="tc-view__TcView-nuazoi-0 fPjBcr IS5"
>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr IS2"
  >
    <div
      className="tc-text__TcText-sc-15igzev-0 lhcAkf IS1"
    >
      Nature notes
    </div>
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 lhcAkf IS3"
  >
    <p>
      <b>
        Rick Astley
      </b>
      , singer-songwriter, 
      <i>
        Never Gonna Give You Up 
      </i>
      (1987), 53; 
      <b>
        Mike Batt
      </b>
      , composer, songwriter, 
      <i>
        Wombling Free 
      </i>
      (1978), 
      <i>
        Bright Eyes 
      </i>
    </p>
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 lhcAkf IS4"
  >
    <span>
      Libby Purves
    </span>
  </div>
</div>
`;

exports[`tile s with logo for medium breakpoint 1`] = `
<style>
.IS1 {
  color: #1D1D1B;
  font-family: TimesModern-Bold;
  font-size: 20;
  margin-bottom: 0;
  line-height: 20px;
}

.IS2 {
  flex-direction: row;
  align-items: center;
  margin-bottom: 5px;
}

.IS3 {
  color: #696969;
  font-family: TimesDigitalW04-Regular;
  font-size: 14;
  line-height: 20px;
}

.IS4 {
  color: #696969;
  font-family: GillSansMTStd-Medium;
  font-size: 12;
  margin-top: 10px;
}

.IS5 {
  padding: 15px;
}
</style>

<div
  className="tc-view__TcView-nuazoi-0 fPjBcr IS5"
>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr IS2"
  >
    LOGO
    <div
      className="tc-text__TcText-sc-15igzev-0 lhcAkf IS1"
    >
      Nature notes
    </div>
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 lhcAkf IS3"
  >
    <p>
      <b>
        Rick Astley
      </b>
      , singer-songwriter, 
      <i>
        Never Gonna Give You Up 
      </i>
      (1987), 53; 
      <b>
        Mike Batt
      </b>
      , composer, songwriter, 
      <i>
        Wombling Free 
      </i>
      (1978), 
      <i>
        Bright Eyes 
      </i>
    </p>
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 lhcAkf IS4"
  >
    <span>
      Libby Purves
    </span>
  </div>
</div>
`;
